[gd_scene load_steps=5 format=3 uid="uid://der6t6sqo4u0o"]

[ext_resource type="PackedScene" uid="uid://c012adynymsqp" path="res://scenes/ui/menu_ui/settings_menu/types_of_settings_menu/base/abstract_settings_menu.tscn" id="1_a51de"]
[ext_resource type="PackedScene" uid="uid://8scuikwexwi3" path="res://scenes/ui/menu_ui/settings_menu/settings_elements/settings_elements/h_slider_setting.tscn" id="2_bxqdy"]
[ext_resource type="Script" path="res://scripts/ui/menu_ui/settings_menu/types_of_settings_menu/types_of_settings_menu/audio_settings_menu.gd" id="2_lxb6g"]
[ext_resource type="PackedScene" uid="uid://bwmuj3f7smno7" path="res://scenes/ui/menu_ui/settings_menu/settings_elements/settings_elements/check_button_setting.tscn" id="3_431ps"]

[node name="AudioSettingsMenu" instance=ExtResource("1_a51de")]
script = ExtResource("2_lxb6g")

[node name="GeneralVolume" parent="Settings" index="0" instance=ExtResource("2_bxqdy")]
layout_mode = 2
setting_name = "General Volume"

[node name="MusicVolume" parent="Settings" index="1" instance=ExtResource("2_bxqdy")]
layout_mode = 2
setting_name = "Music Volume"

[node name="SoundVolume" parent="Settings" index="2" instance=ExtResource("2_bxqdy")]
layout_mode = 2
setting_name = "SoundVolume"

[node name="PlayMusicOnPause" parent="Settings" index="3" instance=ExtResource("3_431ps")]
layout_mode = 2
setting_name = "Play Music on Pause"
